--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
@@ -27,6 +27,10 @@
   &.hero--bg-circles {
     @include o-hero-background.o-background-circles;
   }
+  &.is-background-gray-15 .title { // custom option added in hero dialog as Grey-15
+    --kyanite-title-color: var(--kyanite-white-bis);
+    --kyanite-title-strong-color: var(--kyanite-white-bis);
+  }
 
   .hero-body {
     @extend .mx-0;
