KYAN-224 Support for light or dark theme on the page

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.extra="pl.ds.kyanite.common.components.models.PageComponent">
+<sly data-sly-use.extra="pl.ds.kyanite.common.components.models.PageBodyComponent">
   <sly data-sly-set.templateMarker="template-${extra.templateName}"></sly>
   <sly data-sly-set.pageMarker="page-${extra.pageName}"></sly>
   <sly data-sly-set.noNavbarPadding="${extra.noNavbarPadding ? 'no-navbar-padding' : ''}"></sly>
