--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
@@ -34,7 +34,7 @@
     color: var(--kyanite-gray-15) !important;
 
     border: none;
-    background-color: (--kyanite-white) !important;
+    background-color: var(--kyanite-white) !important;
   }
 
   &.is-primary {
