--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -37,10 +37,12 @@
     --kyanite-code: #36464e;
     --kyanite-code-background: #f5f5f5;
     --kyanite-navbar-height: 3.25rem;
-    --kyanite-link: var(--kyanite-primary);
+    --kyanite-link: var(--kyanite-primary); // anchor
     --kyanite-duration: 150ms;
     --kyanite-easing: ease-in-out;
     --kyanite-background: #fff;
+
+    --kyanite-radius: 2px;
 
     --kyanite-custom-input-placeholder-color: var(--kyanite-gray-40);
     --kyanite-custom-checkbox-radio-hover: #363636;
