--- a/applications/common/frontend/src/components/Tabs/Tabs.scss
+++ b/applications/common/frontend/src/components/Tabs/Tabs.scss
@@ -31,6 +31,7 @@
     & > div {
       display: flex;
       .tabs {
+        --kyanite-tabs-link-active-color: var(--kyanite-gray-15);
          & + div {
           flex: 1;
          }
