--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/socialmedia/socialmedia.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/socialmedia/socialmedia.html
@@ -1,6 +1,6 @@
 <!--/*
   ~
-  ~     Copyright (C) 2023 Dynamic Solutions
+  ~     Copyright (C) 2024 Dynamic Solutions
   ~
   ~     Licensed under the Apache License, Version 2.0 (the "License");
   ~     you may not use this file except in compliance with the License.
@@ -16,14 +16,12 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.blogs.components.models.BlogArticleAuthorBioComponent">
-  <sly data-sly-use.template="./template-default.html"
-       data-sly-call="${template.default @ model=model}">
+<sly data-sly-test="${resource.hasChildren}">
+  <sly data-sly-list="${resource.children}">
+    <sly data-sly-resource="${item}"></sly>
   </sly>
-  <sly data-sly-test="${wcmmode.isEdit}">
-    <sly data-sly-test.errMessage="${model.authorInfoErrMessage}">
-      <div>Failed to retrieve author info</div>
-      <div>${errMessage}</div>
-    </sly>
-  </sly>
+</sly>
+<sly data-sly-test="${!resource.hasChildren}">
+  <sly data-sly-use.lib="/libs/wcm/foundation/components/commons/templates.html"
+       data-sly-call="${lib.placeholder @ classes=''}"></sly>
 </sly>
