--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -58,18 +58,6 @@
     --kyanite-primary-100-l: 97%;
     --kyanite-primary-invert: #fff;
     --kyanite-primary-invert-l: 99%;
-  // results in:
-  // --kyanite-primary-100 
-  // --kyanite-primary-90
-  // --kyanite-primary-80
-  // --kyanite-primary-70
-  // --kyanite-primary-60
-  // --kyanite-primary-50
-  // --kyanite-primary-40
-  // --kyanite-primary-30
-  // --kyanite-primary-20
-  // --kyanite-primary-10 
-  // --kyanite-primary-00 - black
   
     --kyanite-link-h: 220deg;
     --kyanite-link-s: 100%;
@@ -116,4 +104,61 @@
     --kyanite-gray-30-l: 29%;
     --kyanite-gray-15-l: 16%;
     --kyanite-gray-10-l: 9%;
+}
+
+.theme-light {
+  .navbar {
+    --kyanite-navbar-background-color: var(--kyanite-white);
+    --kyanite-navbar-burger-color: var(--kyanite-gray-40);
+    
+    --kyanite-custom-navbar-megamenu-background: var(--kyanite-white-bis);
+    --kyanite-custom-navbar-item-color-hover: var(--kyanite-gray-15);
+    --kyanite-custom-navbar-dropdown-item-background-hover: #f5f5f5;
+    --kyanite-custom-navbar-dropdown-item-text-hover: #0a0a0a;
+  }
+  .title {
+    --kyanite-title-color: var(--kyanite-gray-15);
+    --kyanite-title-weight: var(--kyanite-weight-bold);
+  }
+  .subtitle {
+    --kyanite-subtitle-color: var(--kyanite-gray-40);
+    --kyanite-subtitle-weight: var(--kyanite-weight-semibold);
+  }
+  .tabs {
+    --kyanite-tabs-link-active-color: var(--kyanite-gray-15);
+  }
+  .code-snippet {
+    --kyanite-custom-codesnippet-title-color: var(--kyanite-gray-15);
+    --kyanite-custom-codesnippet-code-background-color: var(--kyanite-white-bis);
+    --kyanite-custom-codesnippet-icon-color: var(--kyanite-gray-90);
+    --kyanite-custom-codesnippet-icon-mobile-color: var(--kyanite-gray-15);
+    --kyanite-custom-codesnippet-icon-hover-code-color: var(--kyanite-gray-15);
+    --kyanite-custom-codesnippet-icon-hover-color: var(--kyanite-primary);
+    --kyanite-custom-codesnippet-icon-message-color: var(--kyanite-primary-100);
+    --kyanite-custom-codesnippet-icon-message-background-color: var(--kyanite-primary);
+    --kyanite-custom-codesnippet-border-color: var(--kyanite-gray-90);
+  }
+  .tag {
+    --kyanite-custom-tag-background: #2a2a2a;
+    --kyanite-custom-tag-text: #FFF;
+  }
+  .button {
+    --kyanite-control-radius: var(--border-radius-1) !important;
+    &.is-ghost {
+      --kyanite-button-ghost-color: var(--kyanite-gray-15);
+      --kyanite-button-ghost-hover-color: var(--kyanite-primary);
+    }
+  }
+  .card {
+    --kyanite-card-background-color: #FFF;
+    --kyanite-card-footer-border-top: #ededed;
+  }
+  .link {
+    --kyanite-custom-link-color: var(--kyanite-gray-15);
+  }
+  .footer {
+    --kyanite-footer-background-color: var(--kyanite-gray-10);
+    --kyanite-footer-color: var(--kyanite-white-bis);
+    --kyanite-custom-footer-menu-label: var(--kyanite-gray-70);
+  }
 }
