KYAN-217 new color system - update readme

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
@@ -22,7 +22,7 @@
   border: none;
 
   &::after {
-    background-color: var(--kyanite-primary);
+    background-color: var(--kyanite-custom-animated-link-underline-color);
     content: '';
     display: block;
     margin-top: 3px;
