--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -47,6 +47,8 @@
     --kyanite-custom-input-placeholder-color: var(--kyanite-gray-40);
     --kyanite-custom-checkbox-radio-hover: #363636;
 
+    --kyanite-custom-animated-link-underline-color: var(--kyanite-primary); // footer, navbar and content
+
     --kyanite-custom-article-thumbnail-mdi-color: #000;
 
     /* Colors */
