KYAN-217 add default content color variable, remove default from content template

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -22,6 +22,7 @@
 .a-content {
   line-height: var(--line-height-150);
   letter-spacing: default;
+  color: var(--kyanite-custom-content-color);
 
   code {
     word-break: break-word;
