--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -126,6 +126,9 @@
     --kyanite-subtitle-color: var(--kyanite-gray-40);
     --kyanite-subtitle-weight: var(--kyanite-weight-semibold);
   }
+  .content {
+    --kyanite-custom-content-color: var(--kyanite-gray-40);
+  }
   .tabs {
     --kyanite-tabs-link-active-color: var(--kyanite-gray-15);
   }
