KYAN-217 add article variables

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.blog-back-button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.blog-back-button.scss
@@ -20,7 +20,7 @@
 
 @mixin a-blog-back-button {
   @include link.a-animated-underline-link;
-  color: var(--kyanite-gray-15) !important;
+  color: var(--kyanite-body-color) !important;
   display: inline-block;
   overflow: hidden;
 }
