KYAN-229 Remove possibility of setting text shade for Title, Content and Tab components

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/content/content.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/content/content.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.ContentComponent">
-    <div class="content ${model.size} ${model.textWeight} ${model.textColorVariant}">
+    <div class="content ${model.size} ${model.textWeight} ${model.color}">
         ${model.text @ context='unsafe'}
     </div>
 </sly>
