KYAN-217 css vars - transition, correct tag and separator, message, progress bar and panel only for theme-light

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/blogarticleheader.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleheader/blogarticleheader.html
@@ -21,7 +21,7 @@
   <div class="container blog-article-header">
     <div class="tags are-normal">
       <sly data-sly-list.item="${blog.tags}">
-            <span class="tag is-dark is-normal">
+            <span class="tag is-normal">
                ${item.text}
             </span>
       </sly>
