--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/featuredblogarticle/featuredblogarticle.html
@@ -31,7 +31,7 @@
             <div class="content-info">
               <div class="tags are-normal" data-sly-test.item=${article.tags}>
                 <sly data-sly-list.item="${article.tags}">
-                  <span class="tag is-dark is-normal">
+                  <span class="tag is-normal">
                     ${item.text}
                   </span>
                 </sly>
