--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -47,6 +47,7 @@
 
     color: var(--kyanite-custom-article-mdi-color);
     transform: rotate(45deg);
+    transition: color var(--kyanite-duration) var(--kyanite-easing);
   }
 
   .image-hero img {
