KYAN-217 small correction

--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -85,7 +85,7 @@
     --kyanite-gray-10-l: 9%;  // #181818 old grey-1000
 
   .button {
-    --kyanite-control-radius: var(--border-radius-1) !important;
+    --kyanite-control-radius: var(--border-radius-1);
   }
 }
 
