KYAN-217 correct visual tests

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
@@ -32,6 +32,12 @@
     --kyanite-title-strong-color: var(--kyanite-white-bis);
   }
 
+  &.is-primary, &.is-secondary, &.is-dark, &.is-link {
+    .content {
+      color: var(--kyanite-white-bis);
+    }
+  }
+
   .hero-body {
     @extend .mx-0;
 
