--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -28,7 +28,14 @@
   $spacing-directions: variables.$spacing-directions,
   $spacing-horizontal: variables.$spacing-horizontal,
   $spacing-vertical: variables.$spacing-vertical,
-  $spacing-values: variables.$spacing-values
+  $spacing-values: variables.$spacing-values,
+
+  // we need to use the same values for horizontal padding as for hero component
+  // to have a consistent design
+  $section-padding: map.get(variables.$spacing-values, '6_3') map.get(variables.$spacing-values, '5'),
+  $section-padding-desktop: map.get(variables.$spacing-values, '6_5') map.get(variables.$spacing-values, '6'),
+  $section-padding-medium: map.get(variables.$spacing-values, '6_3') map.get(variables.$spacing-values, '5'),
+  $section-padding-large: map.get(variables.$spacing-values, '6_5') map.get(variables.$spacing-values, '6'),
 );
 
 .theme-dark {
